Adicione botão pra mostrar menu e corrija responsividade

--- a/backend.html
+++ b/backend.html
@@ -9,6 +9,7 @@
 <body>
     <header class="topbar">
         <span>Aprenda Web - VSLearn (Backend)</span>
+        <button id="menu-toggle">☰</button>
     </header>
 
     <div class="container">
