--- a/css.html
+++ b/css.html
@@ -10,7 +10,9 @@
     <!-- Barra superior fixa -->
     <header class="topbar">
         <span>Aprenda Web - VSLearn (CSS)</span>
+        <button id="menu-toggle">☰</button>
     </header>
+
     <div class="container">
         <!-- Painel lateral: explorador de arquivos -->
         <aside class="sidebar">
