--- a/editor.html
+++ b/editor.html
@@ -102,6 +102,7 @@
 <body>
     <header class="topbar">
         <span>Aprenda Web - VSLearn (Editor + Preview)</span>
+        <button id="menu-toggle">☰</button>
     </header>
 
     <aside class="sidebar">
