--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR" data-page="index">
 <head>
-    <!-- Metadados básicos e configuração de responsividade -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>VSCode Simulado - Index</title>
-
-    <!-- Estilos principais -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Barra superior simulando o cabeçalho do VSCode -->
+    <!-- Top Bar -->
     <header class="topbar">
         <span>Aprenda Web - VSLearn</span>
+        <button id="menu-toggle">☰</button>
     </header>
 
     <div class="container">
-        <!-- Painel lateral simulando o "Explorador de Arquivos" -->
+        <!-- Sidebar / Explorador -->
         <aside class="sidebar">
             <div class="explorer-title">EXPLORADOR</div>
 
@@ -30,9 +27,9 @@
                     </a>
                 </li>
 
-                <!-- Pastas dos módulos -->
+                <!-- Módulos -->
                 <li class="folder closed">
-                    <div class="folder-header file-link" data-href="html.html" data-status="Abrir módulo HTML: Estrutura e Semântica">
+                    <div class="folder-header file-link" data-href="html.html" data-status="Abrir módulo HTML">
                         <span class="folder-arrow">▸</span>
                         <img src="icons/html.svg" alt="Ícone HTML" class="icon-svg">
                         <span class="file-name">HTML</span>
@@ -40,7 +37,7 @@
                 </li>
 
                 <li class="folder closed">
-                    <div class="folder-header file-link" data-href="css.html" data-status="Abrir módulo CSS: Estilização e Layouts">
+                    <div class="folder-header file-link" data-href="css.html" data-status="Abrir módulo CSS">
                         <span class="folder-arrow">▸</span>
                         <img src="icons/css.svg" alt="Ícone CSS" class="icon-svg">
                         <span class="file-name">CSS</span>
@@ -48,15 +45,15 @@
                 </li>
 
                 <li class="folder closed">
-                    <div class="folder-header file-link" data-href="js.html" data-status="Abrir módulo JavaScript: Lógica e DOM">
+                    <div class="folder-header file-link" data-href="js.html" data-status="Abrir módulo JavaScript">
                         <span class="folder-arrow">▸</span>
-                        <img src="icons/javascript.svg" alt="Ícone JavaScript" class="icon-svg">
+                        <img src="icons/javascript.svg" alt="Ícone JS" class="icon-svg">
                         <span class="file-name">JavaScript</span>
                     </div>
                 </li>
 
                 <li class="folder closed">
-                    <div class="folder-header file-link" data-href="backend.html" data-status="Abrir módulo Backend: Servidor e Banco de Dados">
+                    <div class="folder-header file-link" data-href="backend.html" data-status="Abrir módulo Backend">
                         <span class="folder-arrow">▸</span>
                         <img src="icons/database.svg" alt="Ícone Backend" class="icon-svg">
                         <span class="file-name">Backend</span>
@@ -64,16 +61,13 @@
                 </li>
 
                 <li class="folder closed">
-                    <div class="folder-header file-link" data-href="editor.html" data-status="Abrir Editor de Código: Teste suas habilidades">
+                    <div class="folder-header file-link" data-href="editor.html" data-status="Abrir Editor de Código">
                         <span class="folder-arrow">▸</span>
                         <img src="icons/editor.svg" alt="Ícone Editor" class="icon-svg">
                         <span class="file-name">Editor de Código</span>
                     </div>
                 </li>
             </ul>
-
-
-
 
             <!-- Slide switch para alternar tema -->
             <div class="theme-switch">
@@ -85,68 +79,40 @@
             </div>
         </aside>
 
-        <!-- Área principal do conteúdo -->
+        <!-- Área principal -->
         <main class="content">
             <h1>A Base Completa: Sua Jornada Full-Stack VSLearn</h1>
+            <p class="intro">O VSLearn simula o ambiente do Visual Studio Code para lhe dar uma imersão prática e focada.</p>
 
-            <p class="intro">
-                O VSLearn simula o ambiente do Visual Studio Code para lhe dar uma imersão prática e focada.
-            </p>
-
-            <!-- Apresentação do método de aprendizado -->
             <section class="proposta">
                 <h2>O Método VSLearn: Foco no Essencial</h2>
-                <p>
-                    Nossa metodologia se concentra em dominar os pilares de cada tecnologia.
-                </p>
+                <p>Nossa metodologia se concentra em dominar os pilares de cada tecnologia.</p>
                 <div class="placeholder">
                     <p>Para começar, abra o painel EXPLORADOR e selecione a pasta HTML.</p>
                 </div>
             </section>
 
-            <!-- Lista dos módulos principais -->
             <section class="modulos">
                 <h2>Módulos Essenciais (O que você irá dominar)</h2>
                 <ul>
-                    <li>
-                        <strong>HTML</strong> 
-                        <img src="icons/html.svg" alt="Ícone HTML" class="icon-svg-inline">
-                        <span class="descricao-modulo">- Estrutura e Semântica.</span>
-                    </li>
-                    <li>
-                        <strong>CSS</strong> 
-                        <img src="icons/css.svg" alt="Ícone CSS" class="icon-svg-inline">
-                        <span class="descricao-modulo">- Estilização e Layouts Modernos.</span>
-                    </li>
-                    <li>
-                        <strong>JavaScript (JS)</strong> 
-                        <img src="icons/javascript.svg" alt="Ícone JavaScript" class="icon-svg-inline">
-                        <span class="descricao-modulo">- Lógica e Interatividade (DOM).</span>
-                    </li>
-                    <li>
-                        <strong>Backend</strong> 
-                        <img src="icons/database.svg" alt="Ícone Backend" class="icon-svg-inline">
-                        <span class="descricao-modulo">- Conceitos de Servidor e Dados.</span>
-                    </li>
+                    <li><strong>HTML</strong> <img src="icons/html.svg" class="icon-svg-inline">- Estrutura e Semântica.</li>
+                    <li><strong>CSS</strong> <img src="icons/css.svg" class="icon-svg-inline">- Estilização e Layouts Modernos.</li>
+                    <li><strong>JavaScript (JS)</strong> <img src="icons/javascript.svg" class="icon-svg-inline">- Lógica e Interatividade (DOM).</li>
+                    <li><strong>Backend</strong> <img src="icons/database.svg" class="icon-svg-inline">- Conceitos de Servidor e Dados.</li>
                 </ul>
             </section>
 
-            <!-- Encerramento e chamada à ação -->
             <section class="comece-agora">
                 <h2>Sua Primeira Lição Espera</h2>
-                <p>
-                    Clique no diretório HTML para abrir o módulo e iniciar sua jornada.
-                </p>
+                <p>Clique no diretório HTML para abrir o módulo e iniciar sua jornada.</p>
             </section>
         </main>
     </div>
 
-    <!-- Barra inferior (status) -->
     <footer class="bottombar">
         <span>Status: Pronto</span>
     </footer>
 
-    <!-- Script principal -->
     <script src="script.js"></script>
 </body>
 </html>
