--- a/js.html
+++ b/js.html
@@ -10,6 +10,7 @@
     <!-- Barra superior fixa -->
     <header class="topbar">
         <span>Aprenda Web - VSLearn (JavaScript)</span>
+        <button id="menu-toggle">☰</button>
     </header>
 
     <div class="container">
